# includedir

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  rustfmt.toml
codegen/: Cargo.toml
codegen/src/: lib.rs
example/: Cargo.toml  build.rs
example/src/: main.rs
examples/foo/: Cargo.toml  build.rs
examples/foo/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: lib.rs
