[package]
name = "includedir"
description = "Include a whole directory tree at compile time!"
keywords = ["include", "tree", "directory", "build", "static"]
version = "0.1.1"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "MIT"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"

[dependencies]
walkdir = "0.1.5"
phf_codegen = "0.7.12"
