[package]
name = "includedir_codegen"
description = "Include a whole directory tree at compile time! - Compile time part"
keywords = ["include", "tree", "directory", "build", "static"]
version = "0.2.2"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "MIT"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"

[dependencies]
walkdir = "2.1.4"
phf_codegen = "0.7.21"
flate2 = "1.0.1"
