[package]
name = "includedir_codegen"
description = "Include a whole directory tree at compile time! - Compile time part"
keywords = ["include", "tree", "directory", "build", "static"]
categories = ["filesystem"]
version = "0.6.0"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "BSD-3-Clause"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"
documentation = "https://docs.rs/includedir_codegen"
readme = "../README.md"

[dependencies]
walkdir = "2.3.1"
phf_codegen = "0.8.0"
flate2 = "1.0.14"

[badges]
travis-ci = { repository = "tilpner/includedir", branch = "master" }
appveyor = { repository = "tilpner/includedir", branch = "master", service = "github" }
