[package]
name = "foo"
version = "0.1.0"
authors = ["Till Höppner <till@hoeppner.ws>"]
build = "build.rs"
include = ["data", "data/*", "data/**"]
publish = false

[dependencies]
phf = "0.7.12"
# includedir = "0.2.0"
includedir = { path = "../lib" }

[build-dependencies]
# includedir_codegen = "0.2.0"
includedir_codegen = { path = "../codegen" }
