[package]
name = "includedir"
description = "Include a whole directory tree at compile time! - Runtime part"
keywords = ["include", "tree", "directory", "build", "static"]
version = "0.2.2"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "MIT"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"

[features]
default = ["flate2"]

[dependencies]
phf = "0.7.21"

flate2 = { version = "1.0.1", optional = true }
