[package]
name = "includedir"
description = "Include a whole directory tree at compile time! - Runtime part"
keywords = ["include", "tree", "directory", "build", "static"]
categories = ["filesystem"]
version = "0.5.0"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "BSD-3-Clause"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"
documentation = "https://docs.rs/includedir"
readme = "../README.md"

[features]
default = ["flate2"]

[dependencies]
phf = "0.7.21"

flate2 = { version = "1.0.1", optional = true }

[badges]
travis-ci = { repository = "tilpner/includedir", branch = "master" }
appveyor = { repository = "tilpner/includedir", branch = "master", service = "github" }
